// api/protobufs/auth.proto
syntax = "proto3";

package auth;

option go_package = "github.com/datngth03/ecommerce-go-app/pkg/client/auth;auth_client";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/struct.proto";

// =======================
// Service Definition
// =======================
service AuthService {
    // RPC để đăng ký người dùng mới
    rpc Register (RegisterRequest) returns (RegisterResponse);
    
    // RPC để đăng nhập người dùng và nhận token
    rpc Login (LoginRequest) returns (LoginResponse);
    
    // RPC để đnăg nhập bằng mạng xã hội (Google, Facebook, v.v.)
    rpc LoginWithGoogle (LoginWithGoogleRequest) returns (LoginResponse);

    // RPC để làm mới access token bằng refresh token
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    
    // RPC để đăng xuất (thu hồi refresh token)
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    
    // RPC để xác thực access token
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);

}

// =======================
// Messages
// =======================

// Yêu cầu đăng ký người dùng
message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}

// Phản hồi đăng ký
message RegisterResponse {
    string user_id = 1;
    string message = 2;
}

// Yêu cầu đăng nhập
message LoginRequest {
    string email = 1;
    string password = 2;
}

// Yêu cầu đăng nhập bằng Google
message LoginWithGoogleRequest {
    string id_token = 1;
}

// Phản hồi đăng nhập
message LoginResponse {
    string user_id = 1;
    string access_token = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
}

// Yêu cầu làm mới token
message RefreshTokenRequest {
    string refresh_token = 1;
}

// Phản hồi làm mới token
message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
    google.protobuf.Timestamp refresh_token_expires_at = 4;
}

// Yêu cầu đăng xuất
message LogoutRequest {
    string refresh_token = 1;
}

// Phản hồi đăng xuất
message LogoutResponse {
    string message = 1;
}

// Yêu cầu xác thực token
message ValidateTokenRequest {
    string access_token = 1;
}

// Phản hồi xác thực token
message ValidateTokenResponse {
    string user_id = 1;
    bool is_valid = 2;
    string error_message = 3; 
}
